<resources>
    <string name="app_name">C868 CapstoneProject</string>
    <string name="school_district">Midtown School District</string>
    <string name="student_planner">Student Planner</string>
    <string name="classes">My Classes</string>
    <string name="assignments">My Assignments</string>
    <string name="reports">Reports</string>
    <string name="add_class">Add New Class</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="class_schedule">Class Schedule</string>
    <string name="assignment_schedule">Assignment Schedule</string>
    <string name="contact_list">Contact List</string>
    <string name="contact_list_image">Contact list image</string>
    <string name="assignment_schedule_image">Assignment schedule image</string>
    <string name="class_schedule_image">Class schedule image</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="classroom">Classroom</string>
    <string name="class_name">Course Name</string>
    <string name="assignment_name">Assignment Name</string>
    <string name="due_date">Due Date</string>
    <string name="assignment_type">Assignment Type</string>
    <string name="classString">Class</string>
    <string name="set_due_date">Set due date</string>
    <string name="save">Save</string>
    <string name="assignment_type_dropdown">Assignment Type Dropdown</string>
    <string name="assignment_class_dropdown">Assignment class dropdown</string>
    <string name="assignment_name_text_box">Enter assignment name</string>
    <string name="set_due_date_button">Set due date button</string>
    <string name="enter_class_name">Enter class name</string>
    <string name="enter_teacher_name">Enter teacher name</string>
    <string name="enter_classroom">Enter classroom</string>
    <string name="teacher_phone">Teacher\'s phone number</string>
    <string name="enter_teacher_phone">Enter teacher\'s phone number</string>
    <string name="teacher_email">Teacher\'s email</string>
    <string name="enter_teacher_email">Enter teacher\'s email</string>
    <string name="course_notes">Notes about this class:</string>
    <string name="editCourseNotes">Enter class notes</string>
    <string name="share_class_notes">Share class notes</string>
    <string name="id">ID</string>
    <string name="course_id">Course ID</string>
    <string name="auto_set">Auto-Set</string>
    <string name="class_notes">Class notes</string>
    <string name="class_assignments">Assignments for this class:</string>
    <string name="class_id">Class ID</string>
    <string name="assignment_id">Assignment ID</string>
    <string name="add_due_date_alert">Add due date alert</string>
    <string name="current_as_of">Current as of:</string>
    <string name="report_date">Report Date</string>
    <string name="search_teachers">Search Teachers</string>
    <string name="search_contact_list">Search contact list</string>
    <string name="set_start_date">Set Start Date</string>
    <string name="start_date">Start Date</string>
    <string name="teacher">Teacher</string>
    <string name="delete_class">Delete Class</string>
    <string name="delete_assignment">Delete Assignment</string>
</resources>