<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.Course.EditCourse"
        android:orientation="vertical">



        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

            <TextView
                    android:text="@string/class_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/courseNameLabel"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold" />

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_class_name"
                    android:id="@+id/editCourseName"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:textSize="20sp"
                    android:minHeight="48dp"
                    android:inputType="text"
                    android:importantForAutofill="no" />

            <TextView
                    android:text="@string/course_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:id="@+id/courseIDOnEdit"
                    android:layout_marginTop="8dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            <TextView
                    android:hint="@string/auto_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/courseIDTV"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp" />

            <TextView
                    android:text="@string/classroom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/classroomLabel"
                    android:textSize="20sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold" />

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_classroom"
                    android:textSize="20sp"
                    android:id="@+id/editClassroom"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:minHeight="48dp"
                    android:inputType="text"
                    android:importantForAutofill="no" />

            <TextView
                    android:text="@string/teacher_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/teacherNameLabel"
                    android:textSize="20sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold" />

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_teacher_name"
                    android:id="@+id/editTeacherName"
                    android:layout_marginStart="8dp"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:minHeight="48dp"
                    android:inputType="textPersonName"
                    android:importantForAutofill="no" />

            <TextView
                    android:text="@string/teacher_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/teacherPhoneLabel"
                    android:textSize="20sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold" />

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_teacher_phone"
                    android:id="@+id/editTeacherPhone"
                    android:layout_marginStart="8dp"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:minHeight="48dp"
                    android:inputType="phone"
                    android:importantForAutofill="no" />

            <TextView
                    android:text="@string/teacher_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/teacherEmailLabel"
                    android:textSize="20sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold" />

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_teacher_email"
                    android:id="@+id/editTeacherEmail"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:minHeight="48dp"
                    android:textSize="20sp"
                    android:inputType="textEmailAddress"
                    android:importantForAutofill="no" />

            <TextView
                    android:text="@string/start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/start_date"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold" />

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="@string/start_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/start_date_label"
                        android:textSize="20sp"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="8dp"
                         />

                <Button
                        android:text="@string/set_start_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="16dp"
                        android:id="@+id/course_start_button" />
            </LinearLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/classNotesLabel"
                    android:text="@string/course_notes"
                    android:textSize="20sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold" />

            <EditText
                    android:hint="@string/editCourseNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editCourseNotes"
                    android:textSize="20sp"
                    android:inputType="textMultiLine"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp" />

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp">

                <Button
                        android:text="@android:string/cancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/cancel_course_button"
                        android:layout_margin="8dp"
                        android:layout_weight="1" />

                <Button
                        android:text="@string/save"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/save_course_button"
                        android:layout_margin="8dp"
                        android:layout_weight="1" />

            </LinearLayout>
        </LinearLayout>

</ScrollView>