<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.Assignment.EditAssignment">

    <TextView
            android:text="@string/assignment_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/assignmentNameLabel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/assignment_name_text_box"
            android:ems="10"
            android:id="@+id/editAssignmentName"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/assignmentNameLabel"
            android:minHeight="48dp"
            android:inputType="text"
            android:importantForAutofill="no" />

    <TextView
            android:text="@string/assignment_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/assignmentTypeLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/editAssignmentName" />

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/assignmentTypeSpinner"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/assignment_type_dropdown"
            app:layout_constraintTop_toBottomOf="@+id/assignmentTypeLabel"
            android:minHeight="48dp" />

    <TextView
            android:text="@string/classString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/assignmentCourseLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/assignmentTypeSpinner" />

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/assignmentClassSpinner"
            android:contentDescription="@string/assignment_class_dropdown"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/assignmentCourseLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:minHeight="48dp" />

    <TextView
            android:text="@string/due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/assignmentDateLabel"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/assignmentClassSpinner"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" />

    <TextView
            android:hint="@string/due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/set_due_date_label"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/assignmentDateLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" />

    <Button
            android:text="@string/set_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setAssignmentDateButton"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/set_due_date_label"
            app:layout_constraintTop_toBottomOf="@+id/assignmentDateLabel"
            android:contentDescription="@string/set_due_date" />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/setAssignmentDateButton"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">

        <Button
                android:text="@android:string/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cancel_assignment_button"
                android:layout_margin="8dp"
                android:layout_weight="1" />

        <Button
                android:text="@string/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/save_assignment_button"
                android:layout_margin="8dp"
                android:layout_weight="1" />

    </LinearLayout>

    <TextView
            android:text="@string/assignment_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/assignmentIDOnEdit"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

    <TextView
            android:hint="@string/auto_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/assignmentIDTV"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/assignmentIDOnEdit"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>