<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.Course.CourseDetail">

    <TextView
            android:text="@string/class_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/courseDetailNameLabel" />

    <TextView
            android:text="@string/class_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:id="@+id/courseDetailName"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/courseDetailNameLabel" />

    <TextView
            android:text="@string/class_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/courseDetailIDLabel" />

    <TextView
            android:text="@string/class_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/courseDetailID"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/courseDetailIDLabel" />

    <TextView
            android:text="@string/classroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/courseDetailClassroomLabel"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/courseDetailName"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" />

    <TextView
            android:text="@string/classroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textSize="20sp"
            android:id="@+id/courseDetailClassroom"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/courseDetailClassroomLabel" />

    <TextView
            android:text="@string/teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/courseDetailTeacherLabel"
            app:layout_constraintTop_toBottomOf="@+id/courseDetailClassroom"
            android:layout_marginTop="16dp" />

    <TextView
            android:text="@string/teacher_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textSize="20sp"
            android:id="@+id/courseDetailTeacherName"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/courseDetailTeacherLabel" />

    <TextView
            android:text="@string/teacher_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textSize="20sp"
            android:id="@+id/courseDetailTeacherPhone"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/courseDetailTeacherName" />

    <TextView
            android:text="@string/teacher_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:id="@+id/courseDetailTeacherEmail"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/courseDetailTeacherPhone" />

    <TextView
            android:text="@string/course_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:id="@+id/courseDetailNotesLabel"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/courseDetailTeacherEmail" />

    <TextView
            android:hint="@string/class_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textSize="20sp"
            android:id="@+id/courseDetailNotes"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/courseDetailNotesLabel"
            app:layout_constraintEnd_toStartOf="@+id/shareNotesButton"
            app:layout_constraintHorizontal_bias="0.0" />

    <TextView
            android:text="@string/class_assignments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/courseDetailAssignmentLabel"
            android:layout_marginTop="24dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/courseDetailNotes"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" />

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:id="@+id/courseDetailAssignmentsRV"
            app:layout_constraintTop_toBottomOf="@+id/courseDetailAssignmentLabel"
            android:layout_marginTop="8dp" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_share_24"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/shareNotesButton"
            app:layout_constraintStart_toEndOf="@+id/courseDetailNotesLabel"
            android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:minHeight="48dp"
            android:contentDescription="@string/share_class_notes"
            app:layout_constraintTop_toTopOf="@+id/courseDetailNotesLabel" />

    <TextView
            android:text="@string/start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start_date_name"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/courseDetailID"
            android:layout_marginEnd="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:text="@string/start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start_date_display"
            android:layout_marginEnd="8dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/start_date_name" />

</androidx.constraintlayout.widget.ConstraintLayout>