<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.Reports.ContactListReport">

    <TextView
            android:text="@string/contact_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/contact_list_title" />

    <TextView
            android:text="@string/current_as_of"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/contact_list_date"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/contact_list_title" />

    <TextView
            android:text="@string/report_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/report_date"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/contact_list_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:id="@+id/contact_list_rv"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/contact_search" />

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:hint="@string/search_teachers"
            android:id="@+id/contact_search"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/report_date"
            app:layout_constraintEnd_toStartOf="@+id/searchButton"
            android:layout_marginEnd="16dp"
            android:minHeight="48dp"
            android:importantForAutofill="no" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_search_24"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/searchButton"
            app:layout_constraintStart_toEndOf="@+id/contact_search"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="@+id/contact_search"
            android:minHeight="48dp"
            android:contentDescription="@string/search_contact_list" />

</androidx.constraintlayout.widget.ConstraintLayout>